ændringer af const

--- a/areal-1.html
+++ b/areal-1.html
@@ -15,7 +15,8 @@
 
         const height = 3;
         const width = 5;
-
+        const areal = height * width;
+        console.log(areal);
     </script>
 
 </body>
