--- a/areal-1.html
+++ b/areal-1.html
@@ -13,10 +13,13 @@
         //Breden er 5 meter
         //Arealet 15 meter
 
-        const height = 3;
-        const width = 5;
-        const areal = height * width;
-        console.log(areal);
+        let height = 3;
+        let width = 5;
+        let areal = height * width;
+
+        const resultat = "Længden er" + height + "meter og bredden er " + width + "meter. Arealet er " + areal + "kvadratmeter.";
+
+        console.log(resultat);
     </script>
 
 </body>
