--- a/dag3/dyr-a.html
+++ b/dag3/dyr-a.html
@@ -9,13 +9,16 @@
 
 <body>
 
-    <button id="myBut">klik</button>
-
     <script>
-        const myBut = document.querySelector("#myBut");
-        console.log(myBut)
+        let dyr = {
+            "navn": "elefant",
+            "type": "pattedyr",
+            "levested": "Indien"
+        };
 
+        console.log("En " + dyr.navn + "er et " + dyr.type + ", som lever i " + dyr.levested);
     </script>
+
 
 </body>
 
